// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Equation Functions - Superscript and Subscript Nested SupSub 1`] = `
Array [
  0.7,
  0,
  0,
  0,
  0.7,
  0,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Superscript and Subscript Nested SupSub 2`] = `
Array [
  0.35,
  0,
  0.07,
  0,
  0.35,
  0.04655,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Superscript and Subscript Nested SupSub 3`] = `
Array [
  0.175,
  0,
  0.105,
  0,
  0.175,
  0.08085,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Superscript and Subscript Nested SupSub 4`] = `
Array [
  0.0875,
  0,
  0.1225,
  0,
  0.0875,
  0.09249,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Superscript and Subscript Nested SupSub 5`] = `
Array [
  0.0875,
  0,
  0.1225,
  0,
  0.0875,
  0.07503,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Superscript and Subscript Nested SupSub 6`] = `
Array [
  0.175,
  0,
  0.105,
  0,
  0.175,
  0.0294,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Superscript and Subscript Nested SupSub 7`] = `
Array [
  0.35,
  0,
  0.07,
  0,
  0.35,
  -0.02327,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Superscript and Subscript Single SupSub 1`] = `
Array [
  0.7,
  0,
  0,
  0,
  0.7,
  0,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Superscript and Subscript Single SupSub 2`] = `
Array [
  0.35,
  0,
  0.07,
  0,
  0.35,
  0.04655,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Superscript and Subscript Single SupSub 3`] = `
Array [
  0.35,
  0,
  0.07,
  0,
  0.35,
  -0.02327,
  0,
  0,
  1,
]
`;
